--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Basic templates for quick creation of p5js templates",
   "main": "main.js",
+  "bin": "cli.js",
   "scripts": {
     "start": "node main.js"
   },
@@ -11,7 +12,6 @@
   "repository": "https://github.com/o0morgan0o/p5-templates",
   "dependencies": {
     "chalk": "^4.0.0",
-    "inquirer": "^7.1.0",
-    "p5": "^1.0.0"
+    "inquirer": "^7.1.0"
   }
 }
