--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Basic templates for quick creation of p5js templates",
   "main": "main.js",
-  "bin": "cli.js",
+  "bin": {
+    "p5-template": "./cli.js"
+  },
   "scripts": {
     "start": "node main.js"
   },
