--- a/templates/basic-with-svg-export/package.json
+++ b/templates/basic-with-svg-export/package.json
@@ -1,12 +1,23 @@
 {
-  "name": "basic-with-svg-export",
-  "version": "1.0.0",
-  "description": "",
-  "main": "p5.min.js",
-  "scripts": {
-    "start": "browser-sync start --server -f -w"
-  },
-  "keywords": [],
-  "author": "Morgan Thibert",
-  "license": "ISC"
+    "name": "basic-with-svg-export",
+    "version": "1.0.0",
+    "description": "",
+    "main": "p5.min.js",
+    "scripts": {
+        "server": "node ./dbserver/server.js",
+        "browser": "browser-sync start --server -f -w",
+        "test": "start http://localhost:3000",
+        "start": "start npm run server && start npm run browser"
+    },
+    "keywords": [],
+    "author": "Morgan Thibert",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
+        "express": "^4.17.1"
+    },
+    "devDependencies": {
+        "npm-run-all": "^4.1.5"
+    }
 }
