--- a/templates/basic-with-svg-export/package.json
+++ b/templates/basic-with-svg-export/package.json
@@ -15,8 +15,7 @@
     "dependencies": {
         "body-parser": "^1.19.0",
         "browser-sync": "^2.26.7",
-        "cors": "^2.8.5",
-        "express": "^4.17.1"
+        "cors": "^2.8.5"
     },
     "devDependencies": {
         "npm-run-all": "^4.1.5"
