--- a/templates/basic-with-svg-export/package.json
+++ b/templates/basic-with-svg-export/package.json
@@ -1,22 +1,24 @@
 {
-    "name": "basic-with-svg-export",
-    "version": "1.0.0",
-    "description": "",
-    "main": "p5.min.js",
-    "scripts": {
-        "server": "node ./dbserver/server.js",
-        "browser": "browser-sync start --server -f -w",
-        "test": "start http://localhost:3000",
-        "start": "node server.js"
-    },
-    "keywords": [],
-    "author": "Morgan Thibert",
-    "license": "ISC",
-    "dependencies": {
-        "body-parser": "^1.19.0",
-        "cors": "^2.8.5"
-    },
-    "devDependencies": {
-        "npm-run-all": "^4.1.5"
-    }
+  "name": "basic-with-svg-export",
+  "version": "1.0.0",
+  "description": "",
+  "main": "p5.min.js",
+  "scripts": {
+    "server": "node ./dbserver/server.js",
+    "browser": "browser-sync start --server -f -w",
+    "test": "start http://localhost:3000",
+    "start": "node server.js"
+  },
+  "keywords": [],
+  "author": "Morgan Thibert",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "browser-sync": "^2.26.12",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
+  }
 }
